fix: fix bugs with method of shifts and caps keys and refactor this functions

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  background-color: rgb(46, 46, 46);
 }
 
 .wrapper {
@@ -25,4 +26,17 @@ button {
 
 .key-button {
   background-color: antiquewhite;
+  transition: all 0.5s ease;
+}
+
+.key-button-active {
+  background-color: rgb(245, 97, 97);
+}
+
+.key-button:hover {
+  background-color: rgb(219, 250, 215);
+}
+
+.key-button:active {
+  background-color: rgb(250, 149, 149);
 }
